# rustychain

./: .env.sample  .gitignore  Cargo.toml  README.md  diesel.toml
migrations/2023-08-14-130516_create_blocks_table/: up.sql
migrations/2023-08-14-130526_create_transactions_table/: up.sql
migrations/2023-08-14-130534_create_events_table/: up.sql
migrations/2023-08-16-101647_create_service_contexts/: down.sql  up.sql
migrations/2023-08-21-093002_create_wallets_table/: down.sql  up.sql
migrations/2023-08-28-091844_create_fungible_tokens_table/: down.sql  up.sql
scripts/: test.sh
src/: container.rs  create_app.rs  lib.rs  main.rs  open_api.rs
src/api/: middleware.rs
src/api/controllers/: block_handler.rs  fungible_token.rs  mod.rs  service_context_handler.rs  transaction_handler.rs  wallet_handler.rs
src/api/dto/: block.rs  fungible_token.rs  service_context.rs  transaction.rs  wallet.rs
src/domain/: constants.rs  error.rs
src/domain/models/: block.rs  fungible_token.rs  mod.rs  transaction.rs  transaction_type.rs  wallet.rs
src/domain/repositories/: block.rs  fungible_token.rs  mod.rs  transaction.rs  wallet.rs
src/domain/services/: block.rs  fungible_token.rs  mod.rs  transaction.rs  wallet.rs
src/infrastructure/: error.rs  mod.rs  schema.rs
src/infrastructure/databases/: postgresql.rs
src/infrastructure/models/: block.rs  fungible_token.rs  service_context.rs  wallet.rs  (+1 more)
src/services/: block.rs  fungible_token.rs  mod.rs  transaction.rs  transaction_helper.rs  wallet.rs
src/tests/: integration_test.rs
src/utils/: hex_utils.rs  mod.rs
(+6 files in other folders)
