[package]
name = "rustychain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tracing-actix-web = "0.7"
tracing = "0.1"
actix-threadpool = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono", "serde_json"] }
diesel_migrations = "2.0.0"
async-trait = "0.1.58"
dotenv = { version = "0.15" }
testcontainers = { version = "0.14.0" }
env_logger = "0.10.0"
log = "0.4"
serde_json = "1.0"
futures-util = "0.3.26"
chrono = { version = "0.4.26", features = ["serde"] }
rand = "0.8"
hex = "0.4"
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
utoipa = { version = "3.4.4", features = ["actix_extras", "chrono"] }
utoipa-rapidoc = { version = "0.1.0", features = ["actix-web"] }
utoipa-redoc = { version = "0.1.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["actix-web"] }
